TTR-0: fix: remove error when no rows have retrieved, add adding porters route (#12)
